gitops/platform/envoy-gateway/resources/gateway.yaml
# gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: moongcheap-gateway
  namespace: infra
spec:
  gatewayClassName: moongcheap
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All   # Same이면 monitoring/jenkins ns의 HTTPRoute가 안 붙음
